[gd_scene load_steps=12 format=2]

[ext_resource path="res://Multiplayer/Multiplayer_Menu.gd" type="Script" id=1]
[ext_resource path="res://optionsbackgroung.png" type="Texture" id=2]
[ext_resource path="res://PeaberryBase.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://SmallPixelFont.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Player/Player2f.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 43
font_data = ExtResource( 3 )

[node name="Multiplayer_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 14.0
margin_right = 2.0
margin_bottom = 14.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1312.0
margin_bottom = 736.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="BlackOverlay" type="ColorRect" parent="."]
anchor_right = 34.4
anchor_bottom = 18.4
margin_left = -9.0
margin_top = -8.0
margin_right = -43822.8
margin_bottom = -12806.4
color = Color( 0, 0, 0, 0.796078 )

[node name="P1" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -307.0
margin_right = 250.0
margin_bottom = 193.0
texture = ExtResource( 5 )
expand = true

[node name="P1L" type="Button" parent="."]
margin_left = 609.0
margin_top = 439.0
margin_right = 649.0
margin_bottom = 474.0
custom_colors/font_color_hover = Color( 1, 0.960784, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "<"
flat = true

[node name="P1R" type="Button" parent="."]
margin_left = 657.0
margin_top = 439.0
margin_right = 697.0
margin_bottom = 474.0
custom_colors/font_color_hover = Color( 1, 0.960784, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = ">"
flat = true

[node name="User_Name" type="LineEdit" parent="."]
light_mask = 0
anchor_left = 0.502
anchor_top = 0.5
anchor_right = 0.502
anchor_bottom = 0.5
margin_left = -308.624
margin_top = 147.0
margin_right = 308.376
margin_bottom = 226.0
custom_fonts/font = SubResource( 3 )
align = 1
placeholder_text = "Enter your player name here"
placeholder_alpha = 0.242

[node name="Host_Server" type="Button" parent="."]
margin_left = 352.0
margin_top = 605.0
margin_right = 622.0
margin_bottom = 683.0
custom_colors/font_color_hover = Color( 1, 0.960784, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Host Server"
flat = true

[node name="Join_Server" type="Button" parent="."]
margin_left = 696.0
margin_top = 605.0
margin_right = 966.0
margin_bottom = 683.0
custom_colors/font_color_hover = Color( 1, 0.960784, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Join Server"
flat = true

[node name="Device_IP_Address" type="Label" parent="."]
margin_left = 1138.0
margin_top = 692.0
margin_right = 1300.0
margin_bottom = 722.0
custom_fonts/font = SubResource( 4 )
text = "127.0.0.1"
align = 2

[node name="back_button" type="Button" parent="."]
margin_left = 13.0
margin_top = 675.0
margin_right = 106.0
margin_bottom = 713.0
custom_colors/font_color_hover = Color( 1, 0.960784, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Back"
flat = true
align = 0

[node name="Join_Serverold" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.418
anchor_right = 0.5
anchor_bottom = 0.418
margin_left = 288.0
margin_top = 0.35199
margin_right = 622.0
margin_bottom = 81.352
custom_fonts/font = SubResource( 2 )
text = "Join Server"

[node name="Create_Server" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.5
margin_top = -301.5
margin_right = 219.5
margin_bottom = 91.5
text = "Create Server"

[node name="Server_IP_Address" type="LineEdit" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -308.5
margin_top = 93.0
margin_right = 308.5
margin_bottom = 172.0
align = 1
placeholder_text = "127.0.0.1"

[connection signal="pressed" from="P1L" to="." method="_on_P1L_pressed"]
[connection signal="pressed" from="P1R" to="." method="_on_P1R_pressed"]
[connection signal="pressed" from="Host_Server" to="." method="_on_Host_Server_pressed"]
[connection signal="pressed" from="Join_Server" to="." method="_on_Join_Server_pressed"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
